cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

add_executable(test_compiler_mov src/test_mov.cpp)
target_compile_options(test_compiler_mov PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_mov PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_mov PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_mov PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_mov COMMAND test_compiler_mov)

add_executable(test_compiler_test src/test_test.cpp)
target_compile_options(test_compiler_test PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_test PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_test PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_test PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_test COMMAND test_compiler_test)

add_executable(test_compiler_and src/test_and.cpp)
target_compile_options(test_compiler_and PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_and PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_and PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_and PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_and COMMAND test_compiler_and)

add_executable(test_compiler_lea src/test_lea.cpp)
target_compile_options(test_compiler_lea PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_lea PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_lea PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_lea PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_lea COMMAND test_compiler_lea)

add_executable(test_compiler_or src/test_or.cpp)
target_compile_options(test_compiler_or PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_or PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_or PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_or PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_or COMMAND test_compiler_or)

add_executable(test_compiler_xor src/test_xor.cpp)
target_compile_options(test_compiler_xor PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_xor PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_xor PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_xor PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_xor COMMAND test_compiler_xor)

add_executable(test_compiler_add src/test_add.cpp)
target_compile_options(test_compiler_add PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_add PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_add PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_add PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_add COMMAND test_compiler_add)

add_executable(test_compiler_sub src/test_sub.cpp)
target_compile_options(test_compiler_sub PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_sub PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_sub PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_sub PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_sub COMMAND test_compiler_sub)

add_executable(test_compiler_shl src/test_shl.cpp)
target_compile_options(test_compiler_shl PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_shl PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_shl PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_shl PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_shl COMMAND test_compiler_shl)

add_executable(test_compiler_shr src/test_shr.cpp)
target_compile_options(test_compiler_shr PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_shr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_shr PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_shr PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_shr COMMAND test_compiler_shr)

add_executable(test_compiler_scenario_01 src/test_scenario_01.cpp)
target_compile_options(test_compiler_scenario_01 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_01 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_01 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_01 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_01 COMMAND test_compiler_scenario_01)

add_executable(test_compiler_scenario_02 src/test_scenario_02.cpp)
target_compile_options(test_compiler_scenario_02 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_02 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_02 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_02 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_02 COMMAND test_compiler_scenario_02)

add_executable(test_compiler_scenario_03 src/test_scenario_03.cpp)
target_compile_options(test_compiler_scenario_03 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_03 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_03 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_03 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_03 COMMAND test_compiler_scenario_03)

add_executable(test_compiler_scenario_04 src/test_scenario_04.cpp)
target_compile_options(test_compiler_scenario_04 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_04 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_04 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_04 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_04 COMMAND test_compiler_scenario_04)

add_executable(test_compiler_scenario_05 src/test_scenario_05.cpp)
target_compile_options(test_compiler_scenario_05 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_05 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_05 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_05 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_05 COMMAND test_compiler_scenario_05)

add_executable(test_compiler_scenario_06 src/test_scenario_06.cpp)
target_compile_options(test_compiler_scenario_06 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_06 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_06 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_06 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_06 COMMAND test_compiler_scenario_06)

add_executable(test_compiler_scenario_07 src/test_scenario_07.cpp)
target_compile_options(test_compiler_scenario_07 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_07 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_07 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_07 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_07 COMMAND test_compiler_scenario_07)

add_executable(test_compiler_scenario_08 src/test_scenario_08.cpp)
target_compile_options(test_compiler_scenario_08 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_08 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_08 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_08 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_08 COMMAND test_compiler_scenario_08)

add_executable(test_compiler_scenario_09 src/test_scenario_09.cpp)
target_compile_options(test_compiler_scenario_09 PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_scenario_09 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_scenario_09 PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_scenario_09 PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_scenario_09 COMMAND test_compiler_scenario_09)

add_executable(test_compiler_movsx src/test_movsx.cpp)
target_compile_options(test_compiler_movsx PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_movsx PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_movsx PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_movsx PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_movsx COMMAND test_compiler_movsx)

add_executable(test_compiler_imul src/test_imul.cpp)
target_compile_options(test_compiler_imul PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_imul PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_imul PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_imul PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_imul COMMAND test_compiler_imul)

add_executable(test_compiler_mul src/test_mul.cpp)
target_compile_options(test_compiler_mul PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_mul PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_mul PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_mul PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_mul COMMAND test_compiler_mul)

add_executable(test_compiler_cmov src/test_cmov.cpp)
target_compile_options(test_compiler_cmov PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_cmov PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_cmov PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_cmov PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_cmov COMMAND test_compiler_cmov)

add_executable(test_compiler_bsr src/test_bsr.cpp)
target_compile_options(test_compiler_bsr PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_bsr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_bsr PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_bsr PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_bsr COMMAND test_compiler_bsr)

add_executable(test_compiler_shufps src/test_shufps.cpp)
target_compile_options(test_compiler_shufps PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_shufps PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_shufps PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_shufps PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_shufps COMMAND test_compiler_shufps)

add_executable(test_compiler_cmpps src/test_cmpps.cpp)
target_compile_options(test_compiler_cmpps PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_cmpps PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_cmpps PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_cmpps PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_cmpps COMMAND test_compiler_cmpps)

add_executable(test_compiler_pmuludq src/test_pmuludq.cpp)
target_compile_options(test_compiler_pmuludq PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_pmuludq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_pmuludq PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_pmuludq PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_pmuludq COMMAND test_compiler_pmuludq)

add_executable(test_compiler_pshufd src/test_pshufd.cpp)
target_compile_options(test_compiler_pshufd PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_pshufd PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_pshufd PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_pshufd PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_pshufd COMMAND test_compiler_pshufd)

add_executable(test_compiler_pslld src/test_pslld.cpp)
target_compile_options(test_compiler_pslld PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_pslld PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_pslld PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_pslld PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_pslld COMMAND test_compiler_pslld)

add_executable(test_compiler_psrld src/test_psrld.cpp)
target_compile_options(test_compiler_psrld PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_psrld PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_psrld PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_psrld PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_psrld COMMAND test_compiler_psrld)

add_executable(test_compiler_bt src/test_bt.cpp)
target_compile_options(test_compiler_bt PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_bt PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_bt PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_bt PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_bt COMMAND test_compiler_bt)

add_executable(test_compiler_pinsrw src/test_pinsrw.cpp)
target_compile_options(test_compiler_pinsrw PUBLIC ${CC_OPTIONS})
target_include_directories(test_compiler_pinsrw PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_compiler_pinsrw PUBLIC x64cpu x64emulator)
target_link_options(test_compiler_pinsrw PUBLIC ${LD_OPTIONS})
add_test(NAME compiler_pinsrw COMMAND test_compiler_pinsrw)