cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

add_executable(test_cpu_cvtps2dq src/test_cvtps2dq.cpp)
target_compile_options(test_cpu_cvtps2dq PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_cvtps2dq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtps2dq PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtps2dq PUBLIC ${LD_OPTIONS})
add_test(NAME cvtps2dq COMMAND test_cpu_cvtps2dq)

add_executable(test_cpu_cvtsi2ss32 src/test_cvtsi2ss32.cpp)
target_compile_options(test_cpu_cvtsi2ss32 PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_cvtsi2ss32 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtsi2ss32 PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtsi2ss32 PUBLIC ${LD_OPTIONS})
add_test(NAME cvtsi2ss32 COMMAND test_cpu_cvtsi2ss32)

add_executable(test_cpu_unpcklps src/test_unpcklps.cpp)
target_compile_options(test_cpu_unpcklps PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_unpcklps PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_unpcklps PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_unpcklps PUBLIC ${LD_OPTIONS})
add_test(NAME unpcklps COMMAND test_cpu_unpcklps)

add_executable(test_cpu_shifts src/test_shifts.cpp)
target_compile_options(test_cpu_shifts PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_shifts PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shifts PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shifts PUBLIC ${LD_OPTIONS})
add_test(NAME shifts COMMAND test_cpu_shifts)

add_executable(test_cpu_pslldq src/test_pslldq.cpp)
target_compile_options(test_cpu_pslldq PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pslldq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pslldq PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pslldq PUBLIC ${LD_OPTIONS})
add_test(NAME pslldq COMMAND test_cpu_pslldq)

add_executable(test_cpu_psrldq src/test_psrldq.cpp)
target_compile_options(test_cpu_psrldq PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_psrldq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_psrldq PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_psrldq PUBLIC ${LD_OPTIONS})
add_test(NAME psrldq COMMAND test_cpu_psrldq)

add_executable(test_cpu_pmulhw src/test_pmulhw.cpp)
target_compile_options(test_cpu_pmulhw PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pmulhw PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pmulhw PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pmulhw PUBLIC ${LD_OPTIONS})
add_test(NAME pmulhw COMMAND test_cpu_pmulhw)

add_executable(test_cpu_punpck src/test_punpck.cpp)
target_compile_options(test_cpu_punpck PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_punpck PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_punpck PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_punpck PUBLIC ${LD_OPTIONS})
add_test(NAME punpck COMMAND test_cpu_punpck)

add_executable(test_cpu_mul src/test_mul.cpp)
target_compile_options(test_cpu_mul PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_mul PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_mul PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_mul PUBLIC ${LD_OPTIONS})
add_test(NAME mul COMMAND test_cpu_mul)

add_executable(test_cpu_imul src/test_imul.cpp)
target_compile_options(test_cpu_imul PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_imul PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_imul PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_imul PUBLIC ${LD_OPTIONS})
add_test(NAME imul COMMAND test_cpu_imul)

add_executable(test_cpu_pshufd src/test_pshufd.cpp)
target_compile_options(test_cpu_pshufd PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pshufd PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pshufd PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pshufd PUBLIC ${LD_OPTIONS})
add_test(NAME pshufd COMMAND test_cpu_pshufd)

add_executable(test_cpu_tzcnt src/test_tzcnt.cpp)
target_compile_options(test_cpu_tzcnt PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_tzcnt PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_tzcnt PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_tzcnt PUBLIC ${LD_OPTIONS})
add_test(NAME tzcnt COMMAND test_cpu_tzcnt)

add_executable(test_cpu_add src/test_add.cpp)
target_compile_options(test_cpu_add PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_add PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_add PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_add PUBLIC ${LD_OPTIONS})
add_test(NAME add COMMAND test_cpu_add)

add_executable(test_cpu_adc src/test_adc.cpp)
target_compile_options(test_cpu_adc PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_adc PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_adc PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_adc PUBLIC ${LD_OPTIONS})
add_test(NAME adc COMMAND test_cpu_adc)

add_executable(test_cpu_sub src/test_sub.cpp)
target_compile_options(test_cpu_sub PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_sub PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sub PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sub PUBLIC ${LD_OPTIONS})
add_test(NAME sub COMMAND test_cpu_sub)

add_executable(test_cpu_sbb src/test_sbb.cpp)
target_compile_options(test_cpu_sbb PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_sbb PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sbb PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sbb PUBLIC ${LD_OPTIONS})
add_test(NAME sbb COMMAND test_cpu_sbb)

add_executable(test_cpu_rol src/test_rol.cpp)
target_compile_options(test_cpu_rol PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_rol PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rol PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rol PUBLIC ${LD_OPTIONS})
add_test(NAME rol COMMAND test_cpu_rol)

add_executable(test_cpu_ror src/test_ror.cpp)
target_compile_options(test_cpu_ror PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_ror PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_ror PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_ror PUBLIC ${LD_OPTIONS})
add_test(NAME ror COMMAND test_cpu_ror)

add_executable(test_cpu_shl src/test_shl.cpp)
target_compile_options(test_cpu_shl PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_shl PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shl PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shl PUBLIC ${LD_OPTIONS})
add_test(NAME shl COMMAND test_cpu_shl)

add_executable(test_cpu_shr src/test_shr.cpp)
target_compile_options(test_cpu_shr PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_shr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shr PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shr PUBLIC ${LD_OPTIONS})
add_test(NAME shr COMMAND test_cpu_shr)

add_executable(test_cpu_frndint src/test_frndint.cpp)
target_compile_options(test_cpu_frndint PUBLIC ${CC_OPTIONS})
target_compile_options(test_cpu_frndint PUBLIC -frounding-math)
target_include_directories(test_cpu_frndint PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_frndint PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_frndint PUBLIC ${LD_OPTIONS})
add_test(NAME frndint COMMAND test_cpu_frndint)

add_executable(test_cpu_sse_strcmp src/test_sse_strcmp.cpp)
target_compile_options(test_cpu_sse_strcmp PUBLIC ${CC_OPTIONS})
target_compile_options(test_cpu_sse_strcmp PUBLIC -frounding-math)
target_include_directories(test_cpu_sse_strcmp PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sse_strcmp PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sse_strcmp PUBLIC ${LD_OPTIONS})
add_test(NAME sse_strcmp COMMAND test_cpu_sse_strcmp)