cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
set(LD_OPTIONS)

add_executable(test_cpu_movss src/test_movss.cpp)
target_compile_options(test_cpu_movss PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_movss PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_movss PUBLIC x64cpu)
target_link_options(test_cpu_movss PUBLIC ${LD_OPTIONS})
add_test(NAME movss COMMAND test_cpu_movss)

add_executable(test_cpu_cvtps2dq src/test_cvtps2dq.cpp)
target_compile_options(test_cpu_cvtps2dq PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_cvtps2dq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtps2dq PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtps2dq PUBLIC ${LD_OPTIONS})
add_test(NAME cvtps2dq COMMAND test_cpu_cvtps2dq)

add_executable(test_cpu_cvtsi2ss32 src/test_cvtsi2ss32.cpp)
target_compile_options(test_cpu_cvtsi2ss32 PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_cvtsi2ss32 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtsi2ss32 PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtsi2ss32 PUBLIC ${LD_OPTIONS})
add_test(NAME cvtsi2ss32 COMMAND test_cpu_cvtsi2ss32)

add_executable(test_cpu_cvtsi2sd32 src/test_cvtsi2sd32.cpp)
target_compile_options(test_cpu_cvtsi2sd32 PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_cvtsi2sd32 PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtsi2sd32 PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtsi2sd32 PUBLIC ${LD_OPTIONS})
add_test(NAME cvtsi2sd32 COMMAND test_cpu_cvtsi2sd32)

add_executable(test_cpu_unpcklps src/test_unpcklps.cpp)
target_compile_options(test_cpu_unpcklps PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_unpcklps PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_unpcklps PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_unpcklps PUBLIC ${LD_OPTIONS})
add_test(NAME unpcklps COMMAND test_cpu_unpcklps)

add_executable(test_cpu_shifts src/test_shifts.cpp)
target_compile_options(test_cpu_shifts PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_shifts PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shifts PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shifts PUBLIC ${LD_OPTIONS})
add_test(NAME shifts COMMAND test_cpu_shifts)

add_executable(test_cpu_pslldq src/test_pslldq.cpp)
target_compile_options(test_cpu_pslldq PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pslldq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pslldq PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pslldq PUBLIC ${LD_OPTIONS})
add_test(NAME pslldq COMMAND test_cpu_pslldq)

add_executable(test_cpu_psrldq src/test_psrldq.cpp)
target_compile_options(test_cpu_psrldq PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_psrldq PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_psrldq PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_psrldq PUBLIC ${LD_OPTIONS})
add_test(NAME psrldq COMMAND test_cpu_psrldq)

add_executable(test_cpu_pmulhw src/test_pmulhw.cpp)
target_compile_options(test_cpu_pmulhw PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pmulhw PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pmulhw PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pmulhw PUBLIC ${LD_OPTIONS})
add_test(NAME pmulhw COMMAND test_cpu_pmulhw)

add_executable(test_cpu_punpck src/test_punpck.cpp)
target_compile_options(test_cpu_punpck PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_punpck PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_punpck PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_punpck PUBLIC ${LD_OPTIONS})
add_test(NAME punpck COMMAND test_cpu_punpck)

add_executable(test_cpu_mul src/test_mul.cpp)
target_compile_options(test_cpu_mul PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_mul PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_mul PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_mul PUBLIC ${LD_OPTIONS})
add_test(NAME mul COMMAND test_cpu_mul)

add_executable(test_cpu_imul src/test_imul.cpp)
target_compile_options(test_cpu_imul PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_imul PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_imul PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_imul PUBLIC ${LD_OPTIONS})
add_test(NAME imul COMMAND test_cpu_imul)

add_executable(test_cpu_pshufb src/test_pshufb.cpp)
target_compile_options(test_cpu_pshufb PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pshufb PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pshufb PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pshufb PUBLIC ${LD_OPTIONS})
add_test(NAME pshufb COMMAND test_cpu_pshufb)

add_executable(test_cpu_pshufd src/test_pshufd.cpp)
target_compile_options(test_cpu_pshufd PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_pshufd PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pshufd PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pshufd PUBLIC ${LD_OPTIONS})
add_test(NAME pshufd COMMAND test_cpu_pshufd)

add_executable(test_cpu_tzcnt src/test_tzcnt.cpp)
target_compile_options(test_cpu_tzcnt PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_tzcnt PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_tzcnt PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_tzcnt PUBLIC ${LD_OPTIONS})
add_test(NAME tzcnt COMMAND test_cpu_tzcnt)

add_executable(test_cpu_add src/test_add.cpp)
target_compile_options(test_cpu_add PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_add PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_add PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_add PUBLIC ${LD_OPTIONS})
add_test(NAME add COMMAND test_cpu_add)

add_executable(test_cpu_adc src/test_adc.cpp)
target_compile_options(test_cpu_adc PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_adc PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_adc PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_adc PUBLIC ${LD_OPTIONS})
add_test(NAME adc COMMAND test_cpu_adc)

add_executable(test_cpu_sub src/test_sub.cpp)
target_compile_options(test_cpu_sub PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_sub PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sub PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sub PUBLIC ${LD_OPTIONS})
add_test(NAME sub COMMAND test_cpu_sub)

add_executable(test_cpu_sbb src/test_sbb.cpp)
target_compile_options(test_cpu_sbb PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_sbb PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sbb PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sbb PUBLIC ${LD_OPTIONS})
add_test(NAME sbb COMMAND test_cpu_sbb)

add_executable(test_cpu_rcl src/test_rcl.cpp)
target_compile_options(test_cpu_rcl PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_rcl PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rcl PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rcl PUBLIC ${LD_OPTIONS})
add_test(NAME rcl COMMAND test_cpu_rcl)

add_executable(test_cpu_rcr src/test_rcr.cpp)
target_compile_options(test_cpu_rcr PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_rcr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rcr PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rcr PUBLIC ${LD_OPTIONS})
add_test(NAME rcr COMMAND test_cpu_rcr)

add_executable(test_cpu_rol src/test_rol.cpp)
target_compile_options(test_cpu_rol PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_rol PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rol PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rol PUBLIC ${LD_OPTIONS})
add_test(NAME rol COMMAND test_cpu_rol)

add_executable(test_cpu_ror src/test_ror.cpp)
target_compile_options(test_cpu_ror PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_ror PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_ror PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_ror PUBLIC ${LD_OPTIONS})
add_test(NAME ror COMMAND test_cpu_ror)

add_executable(test_cpu_shl src/test_shl.cpp)
target_compile_options(test_cpu_shl PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_shl PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shl PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shl PUBLIC ${LD_OPTIONS})
add_test(NAME shl COMMAND test_cpu_shl)

add_executable(test_cpu_shr src/test_shr.cpp)
target_compile_options(test_cpu_shr PUBLIC ${CC_OPTIONS})
target_include_directories(test_cpu_shr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shr PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shr PUBLIC ${LD_OPTIONS})
add_test(NAME shr COMMAND test_cpu_shr)

add_executable(test_cpu_frndint src/test_frndint.cpp)
target_compile_options(test_cpu_frndint PUBLIC ${CC_OPTIONS})
target_compile_options(test_cpu_frndint PUBLIC -frounding-math)
target_include_directories(test_cpu_frndint PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_frndint PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_frndint PUBLIC ${LD_OPTIONS})
add_test(NAME frndint COMMAND test_cpu_frndint)

add_executable(test_cpu_sse_strcmp src/test_sse_strcmp.cpp)
target_compile_options(test_cpu_sse_strcmp PUBLIC ${CC_OPTIONS})
target_compile_options(test_cpu_sse_strcmp PUBLIC -frounding-math)
target_include_directories(test_cpu_sse_strcmp PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sse_strcmp PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sse_strcmp PUBLIC ${LD_OPTIONS})
add_test(NAME sse_strcmp COMMAND test_cpu_sse_strcmp)

add_executable(test_push src/test_push.cpp)
target_compile_options(test_push PUBLIC ${CC_OPTIONS})
target_compile_options(test_push PUBLIC -frounding-math)
target_include_directories(test_push PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_push PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_push PUBLIC ${LD_OPTIONS})
add_test(NAME push COMMAND test_push)

add_executable(test_cmpxchg16b src/test_cmpxchg16b.cpp)
target_compile_options(test_cmpxchg16b PUBLIC ${CC_OPTIONS})
target_compile_options(test_cmpxchg16b PUBLIC -frounding-math)
target_include_directories(test_cmpxchg16b PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cmpxchg16b PUBLIC x64cpu fmt::fmt-header-only)
target_link_options(test_cmpxchg16b PUBLIC ${LD_OPTIONS})
add_test(NAME cmpxchg16b COMMAND test_cmpxchg16b)

add_executable(test_xchg src/test_xchg.cpp)
target_compile_options(test_xchg PUBLIC ${CC_OPTIONS})
target_compile_options(test_xchg PUBLIC -frounding-math)
target_include_directories(test_xchg PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_xchg PUBLIC x64cpu)
target_link_options(test_xchg PUBLIC ${LD_OPTIONS})
add_test(NAME xchg COMMAND test_xchg)

add_executable(test_palignr src/test_palignr.cpp)
target_compile_options(test_palignr PUBLIC ${CC_OPTIONS})
target_compile_options(test_palignr PUBLIC -frounding-math)
target_include_directories(test_palignr PUBLIC include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_palignr PUBLIC x64cpu)
target_link_options(test_palignr PUBLIC ${LD_OPTIONS})
add_test(NAME palignr COMMAND test_palignr)