cmake_minimum_required(VERSION 3.13)
project(x64)
set(CMAKE_CXX_STANDARD 17)

if(${CMAKE_CXX_COMPILER_ID} STREQUAL GNU)
    set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
    set(LD_OPTIONS)
elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL Clang)
    set(CC_OPTIONS -g -O0 -DDEBUG -fpic)
    set(LD_OPTIONS)
elseif(${CMAKE_CXX_COMPILER_ID} STREQUAL MSVC)
    
endif()

add_executable(test_cpu_movss src/test_movss.cpp)
target_compile_options(test_cpu_movss PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_movss PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_movss PRIVATE x64cpu)
target_link_options(test_cpu_movss PRIVATE ${LD_OPTIONS})
add_test(NAME movss COMMAND test_cpu_movss)

add_executable(test_cpu_cvtps2dq src/test_cvtps2dq.cpp)
target_compile_options(test_cpu_cvtps2dq PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_cvtps2dq PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtps2dq PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtps2dq PRIVATE ${LD_OPTIONS})
add_test(NAME cvtps2dq COMMAND test_cpu_cvtps2dq)

add_executable(test_cpu_cvtsi2ss32 src/test_cvtsi2ss32.cpp)
target_compile_options(test_cpu_cvtsi2ss32 PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_cvtsi2ss32 PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtsi2ss32 PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtsi2ss32 PRIVATE ${LD_OPTIONS})
add_test(NAME cvtsi2ss32 COMMAND test_cpu_cvtsi2ss32)

add_executable(test_cpu_cvtsi2sd32 src/test_cvtsi2sd32.cpp)
target_compile_options(test_cpu_cvtsi2sd32 PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_cvtsi2sd32 PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_cvtsi2sd32 PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_cvtsi2sd32 PRIVATE ${LD_OPTIONS})
add_test(NAME cvtsi2sd32 COMMAND test_cpu_cvtsi2sd32)

add_executable(test_cpu_unpcklps src/test_unpcklps.cpp)
target_compile_options(test_cpu_unpcklps PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_unpcklps PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_unpcklps PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_unpcklps PRIVATE ${LD_OPTIONS})
add_test(NAME unpcklps COMMAND test_cpu_unpcklps)

add_executable(test_cpu_shifts src/test_shifts.cpp)
target_compile_options(test_cpu_shifts PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_shifts PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shifts PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shifts PRIVATE ${LD_OPTIONS})
add_test(NAME shifts COMMAND test_cpu_shifts)

add_executable(test_cpu_pslldq src/test_pslldq.cpp)
target_compile_options(test_cpu_pslldq PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_pslldq PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pslldq PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pslldq PRIVATE ${LD_OPTIONS})
add_test(NAME pslldq COMMAND test_cpu_pslldq)

add_executable(test_cpu_psrldq src/test_psrldq.cpp)
target_compile_options(test_cpu_psrldq PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_psrldq PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_psrldq PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_psrldq PRIVATE ${LD_OPTIONS})
add_test(NAME psrldq COMMAND test_cpu_psrldq)

add_executable(test_cpu_pmulhw src/test_pmulhw.cpp)
target_compile_options(test_cpu_pmulhw PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_pmulhw PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pmulhw PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pmulhw PRIVATE ${LD_OPTIONS})
add_test(NAME pmulhw COMMAND test_cpu_pmulhw)

add_executable(test_cpu_punpck src/test_punpck.cpp)
target_compile_options(test_cpu_punpck PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_punpck PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_punpck PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_punpck PRIVATE ${LD_OPTIONS})
add_test(NAME punpck COMMAND test_cpu_punpck)

add_executable(test_cpu_mul src/test_mul.cpp)
target_compile_options(test_cpu_mul PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_mul PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_mul PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_mul PRIVATE ${LD_OPTIONS})
add_test(NAME mul COMMAND test_cpu_mul)

add_executable(test_cpu_imul src/test_imul.cpp)
target_compile_options(test_cpu_imul PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_imul PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_imul PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_imul PRIVATE ${LD_OPTIONS})
add_test(NAME imul COMMAND test_cpu_imul)

add_executable(test_cpu_pshufb src/test_pshufb.cpp)
target_compile_options(test_cpu_pshufb PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_pshufb PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pshufb PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pshufb PRIVATE ${LD_OPTIONS})
add_test(NAME pshufb COMMAND test_cpu_pshufb)

add_executable(test_cpu_pshufd src/test_pshufd.cpp)
target_compile_options(test_cpu_pshufd PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_pshufd PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_pshufd PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_pshufd PRIVATE ${LD_OPTIONS})
add_test(NAME pshufd COMMAND test_cpu_pshufd)

add_executable(test_cpu_tzcnt src/test_tzcnt.cpp)
target_compile_options(test_cpu_tzcnt PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_tzcnt PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_tzcnt PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_tzcnt PRIVATE ${LD_OPTIONS})
add_test(NAME tzcnt COMMAND test_cpu_tzcnt)

add_executable(test_cpu_add src/test_add.cpp)
target_compile_options(test_cpu_add PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_add PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_add PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_add PRIVATE ${LD_OPTIONS})
add_test(NAME add COMMAND test_cpu_add)

add_executable(test_cpu_adc src/test_adc.cpp)
target_compile_options(test_cpu_adc PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_adc PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_adc PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_adc PRIVATE ${LD_OPTIONS})
add_test(NAME adc COMMAND test_cpu_adc)

add_executable(test_cpu_sub src/test_sub.cpp)
target_compile_options(test_cpu_sub PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_sub PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sub PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sub PRIVATE ${LD_OPTIONS})
add_test(NAME sub COMMAND test_cpu_sub)

add_executable(test_cpu_sbb src/test_sbb.cpp)
target_compile_options(test_cpu_sbb PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_sbb PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sbb PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sbb PRIVATE ${LD_OPTIONS})
add_test(NAME sbb COMMAND test_cpu_sbb)

add_executable(test_cpu_rcl src/test_rcl.cpp)
target_compile_options(test_cpu_rcl PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_rcl PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rcl PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rcl PRIVATE ${LD_OPTIONS})
add_test(NAME rcl COMMAND test_cpu_rcl)

add_executable(test_cpu_rcr src/test_rcr.cpp)
target_compile_options(test_cpu_rcr PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_rcr PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rcr PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rcr PRIVATE ${LD_OPTIONS})
add_test(NAME rcr COMMAND test_cpu_rcr)

add_executable(test_cpu_rol src/test_rol.cpp)
target_compile_options(test_cpu_rol PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_rol PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_rol PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_rol PRIVATE ${LD_OPTIONS})
add_test(NAME rol COMMAND test_cpu_rol)

add_executable(test_cpu_ror src/test_ror.cpp)
target_compile_options(test_cpu_ror PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_ror PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_ror PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_ror PRIVATE ${LD_OPTIONS})
add_test(NAME ror COMMAND test_cpu_ror)

add_executable(test_cpu_shl src/test_shl.cpp)
target_compile_options(test_cpu_shl PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_shl PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shl PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shl PRIVATE ${LD_OPTIONS})
add_test(NAME shl COMMAND test_cpu_shl)

add_executable(test_cpu_shr src/test_shr.cpp)
target_compile_options(test_cpu_shr PRIVATE ${CC_OPTIONS})
target_include_directories(test_cpu_shr PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_shr PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_shr PRIVATE ${LD_OPTIONS})
add_test(NAME shr COMMAND test_cpu_shr)

add_executable(test_cpu_frndint src/test_frndint.cpp)
target_compile_options(test_cpu_frndint PRIVATE ${CC_OPTIONS})
target_compile_options(test_cpu_frndint PRIVATE -frounding-math)
target_include_directories(test_cpu_frndint PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_frndint PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_frndint PRIVATE ${LD_OPTIONS})
add_test(NAME frndint COMMAND test_cpu_frndint)

add_executable(test_cpu_sse_strcmp src/test_sse_strcmp.cpp)
target_compile_options(test_cpu_sse_strcmp PRIVATE ${CC_OPTIONS})
target_compile_options(test_cpu_sse_strcmp PRIVATE -frounding-math)
target_include_directories(test_cpu_sse_strcmp PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cpu_sse_strcmp PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cpu_sse_strcmp PRIVATE ${LD_OPTIONS})
add_test(NAME sse_strcmp COMMAND test_cpu_sse_strcmp)

add_executable(test_push src/test_push.cpp)
target_compile_options(test_push PRIVATE ${CC_OPTIONS})
target_compile_options(test_push PRIVATE -frounding-math)
target_include_directories(test_push PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_push PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_push PRIVATE ${LD_OPTIONS})
add_test(NAME push COMMAND test_push)

add_executable(test_cmpxchg16b src/test_cmpxchg16b.cpp)
target_compile_options(test_cmpxchg16b PRIVATE ${CC_OPTIONS})
target_compile_options(test_cmpxchg16b PRIVATE -frounding-math)
target_include_directories(test_cmpxchg16b PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_cmpxchg16b PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_cmpxchg16b PRIVATE ${LD_OPTIONS})
add_test(NAME cmpxchg16b COMMAND test_cmpxchg16b)

add_executable(test_xchg src/test_xchg.cpp)
target_compile_options(test_xchg PRIVATE ${CC_OPTIONS})
target_compile_options(test_xchg PRIVATE -frounding-math)
target_include_directories(test_xchg PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_xchg PRIVATE x64cpu fmt::fmt-header-only)
target_link_options(test_xchg PRIVATE ${LD_OPTIONS})
add_test(NAME xchg COMMAND test_xchg)

add_executable(test_palignr src/test_palignr.cpp)
target_compile_options(test_palignr PRIVATE ${CC_OPTIONS})
target_compile_options(test_palignr PRIVATE -frounding-math)
target_include_directories(test_palignr PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_palignr PRIVATE x64cpu)
target_link_options(test_palignr PRIVATE ${LD_OPTIONS})
add_test(NAME palignr COMMAND test_palignr)

add_executable(test_pmaddubsw src/test_pmaddubsw.cpp)
target_compile_options(test_pmaddubsw PRIVATE ${CC_OPTIONS})
target_compile_options(test_pmaddubsw PRIVATE -frounding-math)
target_include_directories(test_pmaddubsw PRIVATE include ${CMAKE_SOURCE_DIR}/emulator/include)
target_link_libraries(test_pmaddubsw PRIVATE x64cpu)
target_link_options(test_pmaddubsw PRIVATE ${LD_OPTIONS})
add_test(NAME pmaddubsw COMMAND test_pmaddubsw)